the form Background color in the main image are changed

--- a/CalculHeritage/CalculHeritage.csproj
+++ b/CalculHeritage/CalculHeritage.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Question1CU.resx">
       <DependentUpon>Question1CU.cs</DependentUpon>
@@ -154,6 +155,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\background-with-advocacy-elements_23-2147802094.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
