--- a/CalculHeritage/CalculHeritage.csproj
+++ b/CalculHeritage/CalculHeritage.csproj
@@ -102,7 +102,7 @@
     <Compile Include="Form_Principale.Designer.cs">
       <DependentUpon>Form_Principale.cs</DependentUpon>
     </Compile>
-    <Compile Include="Personne.cs" />
+    <Compile Include="Partition.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question1CU.cs">
